completed top banner & biography section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio - Personal Website</title>
-    </head>
 
-    <body>
-        <h1>HI</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+    <title>Portfolio - Personal Website</title>
+</head>
+
+<body>
+    <!-- Top banner starts here -->
+
+    <section class="top-banner">
+        <div class="hero-content">
+            <p><span class="big-text"> Hello I'm </span></p>
+            <h1>Benedict Tirkey</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, doloribus fuga? Aperiam unde neque
+                consequatur tenetur similique odit?</p><br>
+            <a target="_blank" class="click-button" href="https://www.linkedin.com/in/benedicttirkey/">HIRE ME</a>
+
+        </div>
+
+        <div class="hero-image">
+            <img src="images/peter.png" alt="" class="banner-image">
+        </div>
+
+    </section>
+
+    <!-- Top banner ends here -->
+
+    <!-- Biography section starts here -->
+
+    <section class="biography-banner">
+
+        <div class="biography-image">
+            <img src="images/peter_dream.png" alt="My Bioraphy" class="biography-banner-image">
+
+        </div>
+
+        <div class="biography-content">
+            <h2>Biography</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem consequuntur est perspiciatis voluptas,
+                accusamus repudiandae sed possimus fugiat velit! Aperiam voluptatem saepe a officiis dignissimos quis!
+                Laboriosam ratione officia nesciunt.</p><br>
+            <a target="_blank" class="click-button" href="https://www.linkedin.com/in/benedicttirkey/">Download CV</a>
+        </div>
+    </section>
+
+    <!-- Biography section ends here -->
+
+    <!-- Latest work section starts here -->
+
+    <section>
+        <div class="latest-work">
+            <div class="one-third-width">
+                <img src="images/latest-work/work-1.png" alt="">
+            </div>
+
+            <div class="one-third-width">
+                <img src="images/latest-work/work-2.jpg" alt="">
+            </div>
+            <div class="one-third-width">
+                <img src="images/latest-work/work-3.jpg" alt="">
+            </div>
+
+        </div>
+
+    </section>
 
 
 
-    </body>
+</body>
+
 </html>
