Header, Body, footer, image added in the personal website

--- a/index.html
+++ b/index.html
@@ -49,14 +49,22 @@
                 Laboriosam ratione officia nesciunt.</p><br>
             <a target="_blank" class="click-button" href="https://www.linkedin.com/in/benedicttirkey/">Download CV</a>
         </div>
+
     </section>
 
     <!-- Biography section ends here -->
 
     <!-- Latest work section starts here -->
 
-    <section>
-        <div class="latest-work">
+    <section class="latest-work">
+        <div class="latest-work-heading">
+            <h2>My Latest Work</h2>
+            <p>Visit MY GitHub Profile For More Works of Mine</p>
+            <a target="_blank" class="click-button" href="https://github.com/BenedictTirkey/">GitHub</a>
+        </div>
+
+        <div class="latest-work-sample">
+
             <div class="one-third-width">
                 <img src="images/latest-work/work-1.png" alt="">
             </div>
@@ -72,6 +80,39 @@
 
     </section>
 
+
+    <section class="client-area">
+
+        <div class="client-comment">
+            <h2>What Client Are Say</h2>
+
+            <div class="half-width">
+                <h3>Jhonathan Wick</h3>
+                <p>Founder & CEO</p>
+                <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Beatae distinctio aspernatur, error
+                    doloremque
+                    placeat nesciunt rem.</q>
+            </div>
+
+            <div class="half-width">
+                <h3>Bryan Adams</h3>
+                <p>Founder & CEO</p>
+                <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Beatae distinctio aspernatur, error doloremque placeat nesciunt rem.</q>
+            </div>
+
+        </div>
+
+        <div class="contact-me">
+            <p>Leave me a massage in the</p>
+            <h3>Blogger.benedict@gmail.com</h3>
+        </div>
+
+
+    </section>
+
+    <footer>
+        <P>© 2020 All Right Reserved by Benedict Tirkey.</P>
+    </footer>
 
 
 </body>
